add route to view a book
can now click on the title of the book to view the book's full details, links through to show.html

--- a/templates/books/index.html
+++ b/templates/books/index.html
@@ -7,7 +7,7 @@ BOOKS!
 {% for book in all_books %}
 
     <div>
-        <p>{{ book.title }}</p>
+        <p><a href="/books/{{ book.id }}">{{ book.title }}</a></p>
         <p>{{ book.author.first_name }} {{ book.author.last_name }}</p>
         <p>{{ book.publisher }}</p>
         <p>{{ book.publication_date }}</p>
